# c2m

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-MIT  PRIVACY.md  README.md  SECURITY.md  SUPPORT.md  package.json  pnpm-lock.yaml
.claude/: settings.local.json
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.superpowers/brainstorm/52450-1774076714/: .server-stopped  logo-direction-premium-hacker.html
crates/codepilot-agents/: Cargo.toml
crates/codepilot-agents/src/: claude.rs  codex.rs  codex_cli_thread.rs  lib.rs  types.rs
crates/codepilot-agents/tests/: claude_adapter.rs  codex_adapter.rs
crates/codepilot-bridge/: Cargo.toml
crates/codepilot-bridge/src/: bridge.rs  lib.rs  main.rs
crates/codepilot-bridge/src/transport/: local.rs  mod.rs  types.rs
crates/codepilot-bridge/tests/: bridge.rs  cli.rs  local_transport.rs  validation.rs
crates/codepilot-core/: Cargo.toml
crates/codepilot-core/src/: lib.rs  logger.rs  security.rs  tunnel.rs
crates/codepilot-core/src/diff/: mod.rs  parser.rs  service.rs
crates/codepilot-core/src/pairing/: crypto.rs  mod.rs  qrcode.rs  state.rs
crates/codepilot-core/src/session_store/: event_log.rs  mod.rs  path.rs
crates/codepilot-core/src/slash/: actions.rs  catalog.rs  codex.rs  mod.rs  version.rs
crates/codepilot-core/tests/: crypto_compat.rs  diff_parser.rs  diff_service.rs  pairing_state.rs  security.rs  session_event_store.rs  slash_catalog.rs  tunnel.rs
crates/codepilot-protocol/: Cargo.toml
crates/codepilot-protocol/src/: events.rs  lib.rs  messages.rs  state.rs
crates/codepilot-protocol/tests/: protocol_json_roundtrip.rs
crates/codepilot-relay-worker/: Cargo.toml  wrangler.toml
crates/codepilot-relay-worker/src/: lib.rs
crates/codepilot-relay-worker/tests/: channel.rs  relay_routes.rs
docs/: app-store-submission.md  debugging.md  ios-testing.md  release-preflight-checklist.md  technical.md
docs/plans/: 2026-03-17-deep-testing-optimization-design.md  2026-03-17-deep-testing-optimization-implementation.md  2026-03-17-ios-client-swiftui-design.md  2026-03-17-ios-client-swiftui-implementation.md  2026-03-20-ios-worktree-to-packages-design.md  2026-03-20-ios-worktree-to-packages-implementation.md
docs/superpowers/plans/: 2026-03-21-session-event-replay-recovery.md  2026-03-22-mobile-diff-viewer.md  2026-03-22-rust-monorepo-rewrite.md  2026-03-22-slash-system-protocol-refactor.md  2026-03-23-rust-nodejs-parity.md  2026-03-28-ios-client-composer-parity.md
docs/superpowers/specs/: 2026-03-21-session-event-replay-recovery-design.md  2026-03-22-mobile-diff-viewer-design.md  2026-03-22-rust-monorepo-rewrite-design.md  2026-03-28-ios-client-composer-parity-design.md
scripts/: release-bridge.sh  release-preflight.sh
