[package]
name = "codepilot-agents"
version = "0.1.0"
edition = "2024"
description = "Agent adapter layer for CTunnel's Codex and Claude integrations"
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
codepilot-protocol = { path = "../codepilot-protocol" }
serde_json = "1"
