[package]
name = "codepilot-bridge"
version = "0.1.0"
edition = "2024"
description = "Rust bridge runtime and CLI for CTunnel"
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
clap = { version = "4", features = ["derive"] }
codepilot-agents = { path = "../codepilot-agents" }
codepilot-core = { path = "../codepilot-core" }
codepilot-protocol = { path = "../codepilot-protocol" }
futures-util = "0.3"
serde_json = "1"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "signal", "sync"] }
tokio-tungstenite = "0.26"
