[package]
name = "codepilot-core"
version = "0.1.0"
edition = "2024"

[dependencies]
aes-gcm = "0.10"
base64 = "0.22"
codepilot-protocol = { path = "../codepilot-protocol" }
hex = "0.4"
hkdf = "0.12"
rand = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
x25519-dalek = { version = "2", features = ["static_secrets"] }
