[package]
name = "codepilot-core"
version = "0.1.0"
edition = "2024"
description = "Shared crypto, storage, diff, and security primitives for CTunnel"
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
aes-gcm = "0.10"
base64 = "0.22"
codepilot-protocol = { path = "../codepilot-protocol" }
hex = "0.4"
hkdf = "0.12"
qrcode = "0.14"
rand = "0.9"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
x25519-dalek = { version = "2", features = ["static_secrets"] }
