[package]
name = "codepilot-relay-worker"
version = "0.1.0"
edition = "2024"
description = "Optional Cloudflare Workers relay for CTunnel"
homepage.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"
worker = "0.7"
